--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -27,12 +27,12 @@ jobs:
       # Passo 3: Instalar as dependências do projeto (usando npm ou yarn)
       - name: Install dependencies
         run: |
-          npm install   # ou "yarn install" se você usa o Yarn
+          npm install
 
       # Passo 4: Rodar os testes (se necessário)
       - name: Run tests
         run: |
-          npm test  # ou "yarn test" se você usar o Yarn
+          npm run test
 
       # Passo 5: Instalar o SonarScanner
       - name: Install SonarScanner
