--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -15,17 +15,26 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Set up Python
-        uses: actions/setup-python@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
         with:
-          python-version: '3.x'
+          node-version: '16'
+          cache: 'npm'
+
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install coverage
-      - name: Run tests with coverage
+          npm install
+          npm install -g typescript
+
+      - name: Compile TypeScript
         run: |
-          python -m unittest discover
+          tsc
+
+      - name: Run tests with Vitest
+        run: |
+          npm test
+
       - name: SonarCloud Scan
         uses: SonarSource/sonarqube-scan-action@v4
         env:
