--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,8 @@
 sonar.projectKey=ArthurCremasco_Ts_Calculator_Sonar_CI
 sonar.organization=arthurcremasco
+sonar.host.url=https://sonarcloud.io
+sonar.sources=src
+sonar.tests=tests
+sonar.test.inclusions=**/*.test.ts
+sonar.language=ts
+sonar.typescript.lcov.reportPaths=coverage/lcov.info
