--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,6 +3,6 @@ sonar.organization=arthurcremasco
 sonar.host.url=https://sonarcloud.io
 sonar.sources=src
 sonar.tests=tests
-sonar.test.inclusions=**/*.test.ts
+sonar.test.inclusions=./src/index.test.ts
 sonar.language=ts
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
