--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,5 +2,6 @@ sonar.projectKey=ArthurCremasco_Ts_Calculator_Sonar_CI
 sonar.organization=arthurcremasco
 sonar.host.url=https://sonarcloud.io
 sonar.sources=src
+sonar.test.inclusions=./src/index.test.ts
 sonar.language=ts
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
